openshift/openshift-config.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: banking-portal
spec:
  replicas: 1
  selector:
    matchLabels:
      app: banking-portal
  template:
    metadata:
      labels:
        app: banking-portal
    spec:
      containers:
        - name: banking-portal
          image: image-registry.openshift-image-registry.svc:5000/my-project/banking-portal:latest
          ports:
            - containerPort: 4200
          resources:
            limits:
              cpu: "2"
              memory: "4Gi"
            requests:
              cpu: "1"
              memory: "2Gi"

---
apiVersion: v1
kind: Service
metadata:
  name: banking-portal
spec:
  selector:
    app: banking-portal
  ports:
    - protocol: TCP
      port: 4200
      targetPort: 4200

---
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: banking-portal-route
spec:
  to:
    kind: Service
    name: banking-portal
  port:
    targetPort: 4200
